[ios] Do not trigger context menu while scrolling.

Fail _contextMenuRecognizer if webview's scroll view
panGestureRecognizer was recognized.

BUG=642375

Review-Url: https://codereview.chromium.org/2452973003
Cr-Commit-Position: refs/heads/master@{#427888}

Former-commit-id: 033350786362e99d206a97e0e656c2e0a478e3c9